feat: Launch OpenTelemetry Java course with hands-on demo lab
## 🎓 OpenTelemetry Course (8 Parts)
- Complete 8-part series on observability in Java microservices
- Structured in 3 modules: Foundations, Implementation, Production
- Custom course layout with sidebar navigation and module grouping
- Real-world screenshots from working demo (Jaeger, Prometheus, Grafana)
- Links to hands-on GitHub repository

### Course Structure:
- **Module 1: Foundations**
  - Part 1: Understanding Traces, Metrics, and Logs
  - Part 2: Zero to Tracing (Java Agent setup)

- **Module 2: Implementation**
  - Part 3: Custom Instrumentation with @WithSpan
  - Part 4: Testing & Verification patterns
  - Part 5: Metrics (Counters, Gauges, Histograms)

- **Module 3: Production**
  - Part 6: Logs correlation
  - Part 7: The Collector (with security best practices)
  - Part 8: Sampling & Scaling

## 🔬 OTel Demo Lab
- Published to https://github.com/laxman-sharma/otel-demo
- 3 Java Spring Boot microservices (Order, Inventory, Payment)
- Full observability stack (OTel Collector, Jaeger, Prometheus, Grafana)
- Custom instrumentation examples
- Load generation script
- One-command Docker Compose setup

## 🎨 DSA Enhancements
- Added "Rotate Array" problem with Cyclic Replacements solution
- Enhanced layout with breadcrumbs
- Category-based problem organization
- Visual improvements to problem pages

## 🔧 Technical Improvements
- Excluded `otel-demo/` from Jekyll processing
- Added proper image assets for all OTel course posts
- Removed redundant manual navigation (using layout auto-nav)
- SEO: All posts have proper excerpts and metadata
- Fixed code block formatting issues

## 📦 Assets Added
- otel-jaeger-traces.png (176KB) - Real Jaeger waterfall trace
- otel-prometheus-targets.png (186KB) - Prometheus scraping all services
- otel-grafana-datasources.png (80KB) - Grafana configuration
- dsa-rotate-array.png - Visual explanation of algorithm

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ collections:
   dsa:
     output: true
     permalink: /dsa/:name/
+  opentelemetry:
+    output: true
+    permalink: /opentelemetry/:name/
 
 defaults:
   - scope:
@@ -55,7 +58,13 @@ defaults:
       path: ""
       type: "dsa"
     values:
-      layout: "post"
+      layout: "dsa_post"
+      author: Laxman Sharma
+  - scope:
+      path: ""
+      type: "opentelemetry"
+    values:
+      layout: "dsa_post"
       author: Laxman Sharma
 
 # Exclude from processing
@@ -70,6 +79,7 @@ exclude:
   - _site
   - examples
   - Data Structure & Algorithms
+  - otel-demo
 
 # Permalink structure
 permalink: /:year/:month/:day/:title/
